--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -87,15 +87,15 @@ $include-html-global-classes: $include-html-classes;
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // We use these to define default font stacks
-// $font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-$font-family-sans-serif: "Chivo", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+$font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+// $font-family-sans-serif: "Chivo", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 // $font-family-serif: Georgia, Cambria, "Times New Roman", Times, serif;
 // $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
 // $font-family-script: 'Pacifico', cursive;
 
 // We use these to define default font weights
 $font-weight-normal: 400;
-$font-weight-bold: 900;
+$font-weight-bold: 700;
 
 $white       : #FFFFFF;
 $ghost       : #FAFAFA;
@@ -219,9 +219,9 @@ $global-radius: 0.5rem;
 // $include-html-type-classes: $include-html-classes;
 
 // We use these to control header font styles
-// $header-font-family: "Open Sans Condensed", "Roboto Condensed", Impact, "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-$header-font-family: "Chivo", "Roboto Condensed", Impact, "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-$header-font-weight: 900;
+$header-font-family: "Open Sans Condensed", "Roboto Condensed", Impact, "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+// $header-font-family: "Chivo", "Roboto Condensed", Impact, "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+$header-font-weight: 700;
 // $header-font-style: normal;
 // $header-font-color: $jet;
 // $header-line-height: 1.4;
